name:                copilot
version:             3.1
cabal-version:       >= 1.10
license:             BSD3
license-file:        LICENSE
author:              Frank Dedden, Nis Nordby Wegmann, Lee Pike, Robin Morisset, Sebastian Niller, Alwyn Goodloe
synopsis:            A stream DSL for writing embedded C programs.
build-type:          Simple
maintainer:          Frank Dedden <dev@dedden.net>
category:            Language, Embedded
homepage:            https://copilot-language.github.io
bug-reports:         https://github.com/Copilot-Language/copilot/issues
stability:           Experimental
description:
  This package is the main entry-point for using Copilot.
  .
  Copilot is a stream (i.e., infinite lists) domain-specific language (DSL) in
  Haskell that compiles into embedded C.  Copilot contains an interpreter,
  multiple back-end compilers, and other verification tools.
  .
  A tutorial, examples, and other information are available at
  <https://copilot-language.github.io>.

extra-source-files:
  README.md
  Examples/Heater.hs
  Examples/Array.hs
  Examples/Counter.hs
  CHANGELOG

source-repository head
    type:       git
    location:   https://github.com/Copilot-Language/Copilot.git

library
    hs-source-dirs: src
    default-language:  Haskell2010
    ghc-options:
      -Wall
      -fwarn-tabs
      -fno-warn-orphans
    build-depends:
                       base                 >= 4.9  && < 5
                     , optparse-applicative >= 0.14 && < 0.16
                     , directory            >= 1.3  && < 1.4
                     , filepath             >= 1.4  && < 1.5

                     , copilot-core         >= 3.1  && < 3.2
                     , copilot-theorem      >= 3.1  && < 3.2
                     , copilot-language     >= 3.1  && < 3.2
                     , copilot-libraries    >= 3.1  && < 3.2
                     , copilot-c99          >= 3.1  && < 3.2


    exposed-modules: Language.Copilot, Language.Copilot.Main

executable what4-propositional
    main-is:                Propositional.hs
    hs-source-dirs:         Examples/what4
    build-depends:          base
                          , copilot
                          , copilot-theorem
    default-language:       Haskell2010

executable what4-arithmetic
    main-is:                Arithmetic.hs
    hs-source-dirs:         Examples/what4
    build-depends:          base
                          , copilot
                          , copilot-theorem
    default-language:       Haskell2010

executable what4-structs
    main-is:                Structs.hs
    hs-source-dirs:         Examples/what4
    build-depends:          base
                          , copilot
                          , copilot-theorem
    default-language:       Haskell2010

executable demo
    main-is:            Demo.hs
    hs-source-dirs:     Examples
    build-depends:      base        >= 4.9  && < 5
                      , copilot     >= 3.1  && < 3.2
                      , copilot-core
                      , copilot-theorem
                      , parameterized-utils
    default-language:   Haskell2010

executable wcv
    main-is:            WCV.hs
    hs-source-dirs:     Examples
    build-depends:      base        >= 4.9  && < 5
                      , copilot     >= 3.1  && < 3.2
                      , copilot-core
                      , copilot-theorem
                      , parameterized-utils
    default-language:   Haskell2010

executable addmult
    main-is:            AddMult.hs
    hs-source-dirs:     Examples
    build-depends:      base        >= 4.9  && < 5
                      , copilot     >= 3.1  && < 3.2
                      , copilot-core
                      , copilot-theorem
    default-language:   Haskell2010

executable array
    main-is:            Array.hs
    hs-source-dirs:     Examples
    build-depends:      base        >= 4.9  && < 5
                      , copilot     >= 3.1  && < 3.2
    default-language:   Haskell2010

executable cast
    main-is:            Cast.hs
    hs-source-dirs:     Examples
    build-depends:      base        >= 4.9  && < 5
                      , copilot     >= 3.1  && < 3.2
    default-language:   Haskell2010

executable clock
    main-is:            Clock.hs
    hs-source-dirs:     Examples
    build-depends:      base              >= 4.9  && < 5
                      , copilot           >= 3.1  && < 3.2
                      , copilot-libraries >= 3.1  && < 3.2
                      , copilot-core
                      , copilot-theorem
    default-language:   Haskell2010

executable counter
    main-is:            Counter.hs
    hs-source-dirs:     Examples
    build-depends:      base              >= 4.9  && < 5
                      , copilot           >= 3.1  && < 3.2
    default-language:   Haskell2010

executable engine
    main-is:            Engine.hs
    hs-source-dirs:     Examples
    build-depends:      base              >= 4.9  && < 5
                      , copilot           >= 3.1  && < 3.2
    default-language:   Haskell2010

executable heater
    main-is:            Heater.hs
    hs-source-dirs:     Examples
    build-depends:      base              >= 4.9  && < 5
                      , copilot           >= 3.1  && < 3.2
                      , copilot-c99       >= 3.1  && < 3.2
    default-language:   Haskell2010

executable voting
    main-is:            Voting.hs
    hs-source-dirs:     Examples
    build-depends:      base              >= 4.9  && < 5
                      , copilot           >= 3.1  && < 3.2
    default-language:   Haskell2010
