cabal-version             : >= 1.10
name                      : copilot-bluespec
version                   : 4.5
synopsis                  : A compiler for Copilot targeting FPGAs.
description               :
  This package is a back-end from Copilot to FPGAs in Bluespec.
  .
  Copilot is a stream (i.e., infinite lists) domain-specific language (DSL) in
  Haskell. Copilot contains an interpreter, multiple back-end compilers, and
  other verification tools.
  .
  A tutorial, examples, and other information are available at
  <https://copilot-language.github.io>.

license                   : BSD3
license-file              : LICENSE
maintainer                : Ryan Scott <rscott@galois.com>
homepage                  : https://copilot-language.github.io
bug-reports               : https://github.com/Copilot-Language/copilot-bluespec/issues
stability                 : Experimental
category                  : Language, Embedded
build-type                : Simple
extra-source-files        : README.md
                          , CHANGELOG

author                    : Frank Dedden
                          , Alwyn Goodloe
                          , Ivan Perez
                          , Ryan Scott

x-curation: uncurated

source-repository head
    type:       git
    location:   https://github.com/Copilot-Language/copilot-bluespec.git

library
  default-language        : Haskell2010
  hs-source-dirs          : src

  ghc-options             : -Wall
  build-depends           : base              >= 4.9    && < 5
                          , directory         >= 1.3    && < 1.4
                          , filepath          >= 1.4    && < 1.6
                          , pretty            >= 1.1.2  && < 1.2

                          , copilot-core      >= 4.5    && < 4.6
                          , language-bluespec >= 0.1    && < 0.2

  exposed-modules         : Copilot.Compile.Bluespec

  other-modules           : Copilot.Compile.Bluespec.CodeGen
                          , Copilot.Compile.Bluespec.Compile
                          , Copilot.Compile.Bluespec.Error
                          , Copilot.Compile.Bluespec.Expr
                          , Copilot.Compile.Bluespec.External
                          , Copilot.Compile.Bluespec.FloatingPoint
                          , Copilot.Compile.Bluespec.Name
                          , Copilot.Compile.Bluespec.Representation
                          , Copilot.Compile.Bluespec.Settings
                          , Copilot.Compile.Bluespec.Type

test-suite tests
  type:
    exitcode-stdio-1.0

  main-is:
    Main.hs

  other-modules:
   Test.Copilot.Compile.Bluespec

   Test.Copilot.Compile.Bluespec.External

  build-depends:
      base
    , directory
    , HUnit
    , QuickCheck
    , extra
    , ieee754
    , pretty
    , process
    , random
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2
    , unix

    , copilot-core
    , copilot-bluespec

  hs-source-dirs:
    tests

  default-language:
    Haskell2010

  ghc-options:
    -Wall
