cabal-version:       >=1.10
name:                copilot-core
version:             3.8
synopsis:            An intermediate representation for Copilot.
description:
  Intermediate representation for Copilot.
  .
  Copilot is a stream (i.e., infinite lists) domain-specific language (DSL) in
  Haskell that compiles into embedded C.  Copilot contains an interpreter,
  multiple back-end compilers, and other verification tools.
  .
  A tutorial, examples, and other information are available at
  <https://copilot-language.github.io>.

author:              Frank Dedden, Lee Pike, Robin Morisset, Alwyn Goodloe,
                     Sebastian Niller, Nis Nordbyop Wegmann, Ivan Perez
license:             BSD3
license-file:        LICENSE
maintainer:          Ivan Perez <ivan.perezdominguez@nasa.gov>
homepage:            https://copilot-language.github.io
bug-reports:         https://github.com/Copilot-Language/copilot/issues
stability:           Experimental
category:            Language, Embedded
build-type:          Simple
extra-source-files:  README.md, CHANGELOG

x-curation: uncurated

source-repository head
    type:       git
    location:   https://github.com/Copilot-Language/copilot.git
    subdir:     lib/copilot-core

library

  default-language:  Haskell2010

  hs-source-dirs:    src

  ghc-options:
    -Wall
    -fwarn-tabs
    -fno-warn-orphans

  build-depends:
    base       >= 4.9 && < 5,
    pretty     >= 1.0 && < 1.2,
    mtl        >= 2.0 && < 2.3,
    dlist

  exposed-modules:

    Copilot.Core
    Copilot.Core.Error
    Copilot.Core.Expr
    Copilot.Core.External
    Copilot.Core.Interpret
    Copilot.Core.Interpret.Eval
    Copilot.Core.Interpret.Render
    Copilot.Core.Operators
    Copilot.Core.Spec
    Copilot.Core.Type
    Copilot.Core.Type.Array
    Copilot.Core.Type.Dynamic
    Copilot.Core.Type.Equality
    Copilot.Core.Type.Show
    Copilot.Core.Type.Uninitialized
    Copilot.Core.PrettyPrint
    Copilot.Core.PrettyDot

  other-modules:

    Copilot.Core.ErrorInternal
    Copilot.Core.Interpret.RenderInternal

test-suite unit-tests
  type:
    exitcode-stdio-1.0

  main-is:
    Main.hs

  other-modules:
    Test.Extra
    Test.Copilot.Core.Error
    Test.Copilot.Core.External
    Test.Copilot.Core.Interpret.Eval
    Test.Copilot.Core.Type
    Test.Copilot.Core.Type.Array
    Test.Copilot.Core.Type.Dynamic
    Test.Copilot.Core.Type.Show

  build-depends:
      base
    , HUnit
    , QuickCheck
    , pretty
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2

    , copilot-core

  hs-source-dirs:
    tests

  default-language:
    Haskell2010

  ghc-options:
    -Wall
