cabal-version:       >=1.10
name:                copilot-core
version:             4.0
synopsis:            An intermediate representation for Copilot.
description:
  Intermediate representation for Copilot.
  .
  Copilot is a stream (i.e., infinite lists) domain-specific language (DSL) in
  Haskell that compiles into embedded C.  Copilot contains an interpreter,
  multiple back-end compilers, and other verification tools.
  .
  A tutorial, examples, and other information are available at
  <https://copilot-language.github.io>.

author:              Frank Dedden, Lee Pike, Robin Morisset, Alwyn Goodloe,
                     Sebastian Niller, Nis Nordbyop Wegmann, Ivan Perez
license:             BSD3
license-file:        LICENSE
maintainer:          Ivan Perez <ivan.perezdominguez@nasa.gov>
homepage:            https://copilot-language.github.io
bug-reports:         https://github.com/Copilot-Language/copilot/issues
stability:           Experimental
category:            Language, Embedded
build-type:          Simple
extra-source-files:  README.md, CHANGELOG

x-curation: uncurated

source-repository head
    type:       git
    location:   https://github.com/Copilot-Language/copilot.git
    subdir:     copilot-core

library

  default-language:  Haskell2010

  hs-source-dirs:    src

  ghc-options:
    -Wall
    -fno-warn-orphans

  build-depends:
    base >= 4.9 && < 5

  exposed-modules:

    Copilot.Core
    Copilot.Core.Expr
    Copilot.Core.Operators
    Copilot.Core.Spec
    Copilot.Core.Type
    Copilot.Core.Type.Array

test-suite unit-tests
  type:
    exitcode-stdio-1.0

  main-is:
    Main.hs

  other-modules:
    Test.Extra
    Test.Copilot.Core.Type
    Test.Copilot.Core.Type.Array

  build-depends:
      base
    , HUnit
    , QuickCheck
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2

    , copilot-core

  hs-source-dirs:
    tests

  default-language:
    Haskell2010

  ghc-options:
    -Wall
